Updating Sign model

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,7 @@
 <body class="bg-gray-100 min-h-screen">
 <div class="container mx-auto py-8">
     <div class="bg-white p-8 rounded-lg shadow-md mb-8">
+        <h2 class="text-2xl font-bold text-center">CNN Model Demonstration on GTSRB  dataset</h2>
         <h1 class="text-2xl font-bold mb-6">Image Upload</h1>
         <form method="post" enctype="multipart/form-data" action="/" class="space-y-4">
             <div>
